--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "gatsby-plugin-sass": "^4.14.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "sass": "^1.43.2"
+    "sass": "^1.43.2",
+    "gatsby-plugin-manifest": "^3.14.0",
+    "gatsby-source-filesystem": "^3.14.0"
   }
 }
