--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
   },
   "dependencies": {
     "gatsby": "^3.14.3",
+    "gatsby-plugin-manifest": "^3.14.0",
     "gatsby-plugin-sass": "^4.14.0",
+    "gatsby-source-filesystem": "^3.14.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "sass": "^1.43.2",
-    "gatsby-plugin-manifest": "^3.14.0",
-    "gatsby-source-filesystem": "^3.14.0"
+    "react-responsive-carousel": "^3.2.22",
+    "sass": "^1.43.2"
   }
 }
