--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "camdal",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@tailwindcss/vite": "^4.1.3",
-    "astro": "^5.6.1",
-    "tailwindcss": "^4.1.3"
-  }
+    "name": "camdal",
+    "type": "module",
+    "version": "0.0.1",
+    "scripts": {
+        "dev": "astro dev",
+        "build": "astro build",
+        "preview": "astro preview",
+        "astro": "astro"
+    },
+    "dependencies": {
+        "@astrojs/sitemap": "^3.3.0",
+        "@fontsource-variable/inter": "^5.2.5",
+        "@fontsource/inter": "^5.2.5",
+        "@tailwindcss/vite": "^4.1.3",
+        "astro": "^5.6.1",
+        "tailwindcss": "^4.1.3"
+    }
 }
