--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
         "astro": "astro"
     },
     "dependencies": {
+        "@astrojs/react": "^4.2.3",
         "@astrojs/sitemap": "^3.3.0",
-        "@fontsource-variable/inter": "^5.2.5",
         "@fontsource/inter": "^5.2.5",
         "@tailwindcss/vite": "^4.1.3",
+        "@types/react": "^19.1.1",
+        "@types/react-dom": "^19.1.2",
         "astro": "^5.6.1",
+        "date-fns": "^4.1.0",
+        "react": "^19.1.0",
+        "react-datepicker": "^8.3.0",
+        "react-datetime-picker": "^6.0.1",
+        "react-dom": "^19.1.0",
+        "react-hook-form": "^7.55.0",
         "tailwindcss": "^4.1.3"
     }
 }
