--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@types/react-dom": "^19.1.2",
         "astro": "^5.6.1",
         "date-fns": "^4.1.0",
+        "framer-motion": "^12.7.2",
         "react": "^19.1.0",
         "react-datepicker": "^8.3.0",
         "react-datetime-picker": "^6.0.1",
