--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
         "@astrojs/react": "^4.2.3",
         "@astrojs/sitemap": "^3.3.0",
         "@fontsource/inter": "^5.2.5",
+        "@googlemaps/js-api-loader": "^1.16.8",
         "@tailwindcss/vite": "^4.1.3",
         "@types/react": "^19.1.1",
         "@types/react-dom": "^19.1.2",
+        "@vis.gl/react-google-maps": "^1.5.2",
         "astro": "^5.6.1",
         "date-fns": "^4.1.0",
         "framer-motion": "^12.7.2",
