--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@astrojs/react": "^4.2.3",
         "@astrojs/sitemap": "^3.3.0",
+        "@astrojs/vercel": "^8.1.3",
         "@fontsource/inter": "^5.2.5",
         "@googlemaps/js-api-loader": "^1.16.8",
         "@tailwindcss/vite": "^4.1.3",
